# glitchup

./: Cargo.toml  Options.toml  Untitled.tiff  config.yaml  ffmpeg.txt
src/: benders.rs  loaders.rs  main.rs  mutations.rs  preconvert.rs
src/config/: ioutils.rs  mod.rs  parser.rs
src/mutations2/: global.rs  local.rs  mod.rs
