[package]
name = "glitchup"
description = "A databending library/executable in Rust!"
version = "0.5.0"
license = "MPL-2.0"
repository = "https://github.com/Calmynt/glitchup"
readme = "README.md"
keywords = ["databending", "glitch", "corrupt", "glitchup"]
authors = ["ENBYSS"]
edition = "2018"
maintenance = { status = "actively-developed" }

[[bin]]
name = "glitchup"
path = "src/main.rs"

[dependencies]
image = "0.24.6"
memmap2 = "0.9.4"
rand = "0.7.0"
toml = "0.5.1"
rand_xorshift = "0.2"
rayon = "1.2.0"
rand_core = "0.5"
moveslice = "2.0.1"
cfgmap = {version = "0.2.3", features = ["from_toml", "generator"]}
lazy_static = "1.4.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = {version = "1.0.185", features = ["derive"]}
serde_yaml = "0.9.25"